# andoworld

./: .gitignore  deep_research_plan.md  pyproject.toml  run_live_engine.py  run_synthetic_crisis.py
backend/: __init__.py  requirements.txt
backend/app/: __init__.py  main.py  models.py
backend/app/adapters/: __init__.py
backend/app/iran_war/: __init__.py  backfill_gdelt.py  case_builder.py  causal_extraction.py  claims.py  config.py  entity_resolution.py  fixtures.py  gdelt_backfill.py  gdelt_raw.py  graph.py  ingestion.py  persistence.py  source_status.py  (+1 more)
backend/tests/: conftest.py  test_iran_war_api.py  test_iran_war_claims.py  test_iran_war_entities.py  test_iran_war_extraction.py  test_iran_war_gdelt_backfill.py  test_iran_war_graph.py  test_iran_war_ingestion.py  test_iran_war_persistence.py  test_iran_war_tension.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  api.ts  caseView.test.ts  caseView.ts  graphView.test.ts  graphView.ts  market.test.ts  market.ts  predictionMarkets.test.ts  predictionMarkets.ts  store.ts  types.ts
src/andoworldstate/: __init__.py  graph.py  neo4j_graph.py  smc.py
tests/: test_agent_zero.py  test_cognitive_heuristics.py  test_complex_contagion.py  test_computational_psychology.py  test_evolutionary_dynamics.py  test_fast_frugal.py  test_live_engine_runner.py  test_live_ingestion.py  test_moran.py  test_neo4j_graph.py  test_poliheuristic.py  test_smc.py  test_structural_demographic.py  test_synthetic_crisis_runner.py  test_topological_contagion.py  test_watts.py
(+24 files in other folders)
