[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "andoworldstate"
version = "0.1.0"
description = "Geopolitical predictive simulation core from deep_research_plan.md"
requires-python = ">=3.11"
dependencies = [
    "neo4j>=5,<6",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
